[package]
name = "sharpener-cli"
version = "0.1.0"
authors = ["Pedro Morello Abbud <abbudao@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.3"
reqwest = "0.9.22"
serde = "1"
serde_json = "1"
tempfile = "3.1.0"
tar = "0.4.26"
flate2 = "1.0"
snafu = "0.6"
regex = "1"
md5 = "0.7"

[profile.release]
lto = true
